--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                     <button type="submit">send your message</button>
                 </div>
             </form>
+            <div class="sam">
+                <p>To the best of my knowledge, here is your message hub</p>
+            </div>
         <script src="script.js"></script>
             
     </body>
